--- a/src/scss/variables.scss
+++ b/src/scss/variables.scss
@@ -3,10 +3,10 @@
 
 $color-pack: true;
 
-$body-font-family: 'Helvetica', sans-serif;
-$font-size-root: 16px;
-$line-height-root: 1.5;
-$border-radius-root: 4px;
+$body-font-family: 'Helvetica', 'Roboto', sans-serif;
+$font-size-root: 14px;
+$line-height-root: 1.4;
+$border-radius-root: 5px;
 
 $rounded: ();
 $rounded: map-deep-merge(
@@ -191,16 +191,16 @@ $headings: map-deep-merge(
     'body-2': (
       'size': .875rem,
       'weight': 400,
-      'line-height': 1.25rem,
+      'line-height': 1.45rem,
       'letter-spacing': .0178571429em,
       'font-family': $body-font-family,
       'text-transform': false
     ),
     'button': (
-      'size': .875rem,
+      'size': .775rem,
       'weight': 500,
-      'line-height': 2.25rem,
-      'letter-spacing': .0892857143em,
+      'line-height': 1.75rem,
+      'letter-spacing': 0,
       'font-family': $body-font-family,
       'text-transform': uppercase
     ),
