--- a/src/scss/variables.scss
+++ b/src/scss/variables.scss
@@ -3,7 +3,7 @@
 
 $color-pack: true;
 
-$body-font-family: 'Helvetica', 'Roboto', sans-serif;
+$body-font-family: 'Helvetica', 'Arial', 'Roboto', sans-serif;
 $font-size-root: 14px;
 $line-height-root: 1.4;
 $border-radius-root: 5px;
