--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -111,6 +111,10 @@ body {
       min-height: 58px;
       border: none;
     }
+    textarea {
+      padding: 17px 13px;
+      border: none;
+    }
 
     .v-input__append-inner {
       margin: auto;
@@ -141,6 +145,10 @@ body {
           left: 6px;
         }
       }
+
+      .v-counter {
+        margin-top: 6px;
+      }
     }
   }
 
@@ -152,6 +160,11 @@ body {
     }
   }
   
+  .v-menu {
+    &__content {
+      box-shadow: 0px 2px 42px rgba(0, 0, 0, 0.111233);
+    }
+  }
 }
 
 
@@ -167,6 +180,43 @@ body {
         text-align: center;
         letter-spacing: 0.4px;
         color: #8C8C8C;
+      }
+    }
+  }
+}
+
+.v-application {
+  .catalog_add {
+    &__files {
+      background: #F9FAFB;
+      border-radius: 5px;
+      display: flex;
+      border: 1px solid #DEDEE0;
+      margin-bottom: 0;
+      padding: 17px 13px;
+
+      &-label {
+        font-family: Helvetica;
+        font-size: 12px;
+        line-height: 14px;
+        letter-spacing: 0.3px;
+        text-transform: uppercase;
+        color: #303030;
+        transform: none;
+        margin-bottom: 2px;
+      }
+
+      &__images {
+
+      }
+
+      &__image {
+        width: 92px;
+        height: 92px;
+        border-radius: 4px;
+        margin-right: 10px;
+        position: relative;
+        overflow: hidden;
       }
     }
   }
